test/FAIL/assertcmd/to_many_arguments/04_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

assert byte -4 0x100 h